# device_soc_beken

./: BUILD.gn  Kconfig.liteos_m.defconfig  Kconfig.liteos_m.series  Kconfig.liteos_m.soc  NOTICE  OAT.xml  README.en.md  README.md  README_zh.md
bk7235/: BUILD.gn  Kconfig.liteos_m.defconfig.bk7235  Kconfig.liteos_m.defconfig.series  Kconfig.liteos_m.series  Kconfig.liteos_m.soc
bk7235/hals/: sdk_dir.gni
bk7235/hals/communication/bluetooth/services/: BUILD.gn
bk7235/hals/communication/wifi_lite/wifiaware/: BUILD.gn
bk7235/hals/communication/wifi_lite/wifiservice/: BUILD.gn
bk7235/hals/iot_hardware/wifiiot_lite/: BUILD.gn  hal_iot_flash.c  hal_iot_gpio.c  hal_iot_i2c.c  hal_iot_pwm.c  hal_iot_uart.c  hal_iot_watchdog.c  hal_lowpower.c  hal_reset.c  iot_test.c  iot_test.h
bk7235/hals/update/: BUILD.gn  hal_hota_board.c
bk7235/hals/utils/file/: BUILD.gn
bk7235/hals/utils/file/src/: hal_file.c
bk7235/liteos_m/: BUILD.gn
bk7235/liteos_m/bk_sdk_armino/: BUILD.gn  sdkconfig.gni  sdkconfig.h
bk7235/liteos_m/bk_sdk_armino/components/: BUILD.gn
bk7235/liteos_m/bk_sdk_armino/components/app/: CMakeLists.txt
bk7235/liteos_m/bk_sdk_armino/components/at/: CMakeLists.txt
bk7235/liteos_m/bk_sdk_armino/components/base64/: BUILD.gn  base_64.c  base_64.h
bk7235/liteos_m/bk_sdk_armino/components/bk_adapter/: BUILD.gn  lib_adapter.c
bk7235/liteos_m/bk_sdk_armino/components/bk_ate/: BUILD.gn  ate.c
bk7235/liteos_m/bk_sdk_armino/components/bk_ble/: BUILD.gn
bk7235/liteos_m/bk_sdk_armino/components/bk_cli/: BUILD.gn  CMakeLists.txt  cli.h  cli_aon_rtc.c  cli_at.c  cli_ble.c  cli_config.h  cli_efuse.c  cli_flash.c  cli_flash_test.c  cli_lwip.c  cli_main.c  cli_netif.c  cli_reg.c  cli_rpc.c  cli_uart.c  cli_wdt.c  cli_wifi.c  shell_drv.h  shell_task.c  shell_uart.c
bk7235/liteos_m/bk_sdk_armino/components/bk_common/: CMakeLists.txt
bk7235/liteos_m/bk_sdk_armino/components/bk_event/: BUILD.gn  event.c  event.h
bk7235/liteos_m/bk_sdk_armino/components/bk_init/: BUILD.gn  components_init.c  legacy_init.c
bk7235/liteos_m/bk_sdk_armino/components/bk_log/: BUILD.gn  log.c
bk7235/liteos_m/bk_sdk_armino/components/bk_netif/: BUILD.gn  CMakeLists.txt  bk_netif.c
bk7235/liteos_m/bk_sdk_armino/components/bk_os/: BUILD.gn  CMakeLists.txt  Kconfig  platform_stub.c  rtos_ext.c  rtos_ext.h
bk7235/liteos_m/bk_sdk_armino/components/bk_ps/: BUILD.gn
bk7235/liteos_m/bk_sdk_armino/components/bk_startup/: BUILD.gn  CMakeLists.txt  system_main.c
bk7235/liteos_m/bk_sdk_armino/components/bk_system/: BUILD.gn  CMakeLists.txt  mac.c  printf.c  printf_base.c  printf_impl.h  reboot.c  target_util.c  tick_base.c
bk7235/liteos_m/bk_sdk_armino/components/bk_wifi/: BUILD.gn
bk7235/liteos_m/bk_sdk_armino/components/easy_flash/: BUILD.gn  bk_ef.c  bk_ef.h
bk7235/liteos_m/bk_sdk_armino/components/key/: key_main.c  key_main.h  multi_button.c  multi_button.h
bk7235/liteos_m/bk_sdk_armino/components/key_handle/: key_handle.c  key_handle.h
bk7235/liteos_m/bk_sdk_armino/components/lwip_intf_v2_1/: CMakeLists.txt
bk7235/liteos_m/bk_sdk_armino/components/media/: BUILD.gn  CMakeLists.txt
bk7235/liteos_m/bk_sdk_armino/components/os_source/: CMakeLists.txt
bk7235/liteos_m/bk_sdk_armino/components/release/: osk_revision.h  release.h  sdk_revision.h
bk7235/liteos_m/bk_sdk_armino/components/saradc_intf/: BUILD.gn  saradc_intf.c  saradc_intf.h
bk7235/liteos_m/bk_sdk_armino/components/security/: BUILD.gn  security_func.c  security_func.h
bk7235/liteos_m/bk_sdk_armino/components/temp_detect/: BUILD.gn  CMakeLists.txt  temp_detect.c  temp_detect.h  temp_detect_pub.h
bk7235/liteos_m/bk_sdk_armino/components/user_driver/: BkDriverFlash.c
bk7235/liteos_m/bk_sdk_armino/components/utf8/: BUILD.gn  conv_utf8.c  conv_utf8_gb2312_table.h  conv_utf8_pub.h
bk7235/liteos_m/bk_sdk_armino/include/common/: bk_assert.h  bk_compiler.h  bk_err.h  bk_generic.h  bk_include.h  bk_kernel_err.h  bk_typedef.h  sys_config.h
bk7235/liteos_m/bk_sdk_armino/include/components/: ate.h  aud_intf.h  aud_intf_types.h  audio_transfer.h  audio_transfer_types.h  dvp_camera.h  dvp_camera_types.h  event.h  jpeg_decode.h  log.h  netif.h  netif_types.h  shell_task.h  spidma.h  system.h  uvc_camera.h  video_transfer.h  video_types.h
bk7235/liteos_m/bk_sdk_armino/include/driver/: adc.h  adc_types.h  aon_rtc.h  aon_rtc_types.h  aon_wdt.h  aon_wdt_types.h  aud.h  aud_types.h  calendar.h  calendar_types.h  dma.h  dma2d.h  dma_types.h  dvp_camera.h  dvp_camera_types.h  efuse.h  efuse_types.h  fft.h  fft_types.h  flash.h  flash_partition.h  flash_types.h  gpio.h  gpio_types.h  i2c.h  i2c_types.h  i2s.h  i2s_types.h  int.h  int_types.h  jpeg_dec.h  jpeg_dec_types.h  jpeg_enc.h  jpeg_enc_types.h  lcd.h  lcd_spi.h  lcd_types.h  mailbox.h  mailbox_channel.h  mailbox_types.h  (+36 more)
bk7235/liteos_m/bk_sdk_armino/include/extra/: bk_cli.h  reset_reason.h  shell_task.h
bk7235/liteos_m/bk_sdk_armino/include/modules/: aac_decoder.h  aec.h  audio_ring_buff.h  avilib.h  ble.h  ble_types.h  bt.h  bt_types.h  g711.h  image_scale.h  pm.h  usb.h  wifi.h  wifi_types.h
bk7235/liteos_m/bk_sdk_armino/include/os/: mem.h  os.h  str.h
bk7235/liteos_m/bk_sdk_armino/include/soc/: mapping.h  soc.h  soc_port.h
bk7235/liteos_m/bk_sdk_armino/middleware/: BUILD.gn
bk7235/liteos_m/bk_sdk_armino/middleware/arch/: BUILD.gn
bk7235/liteos_m/bk_sdk_armino/middleware/boards/: BUILD.gn
bk7235/liteos_m/bk_sdk_armino/middleware/compal/: BUILD.gn  CMakeLists.txt
bk7235/liteos_m/bk_sdk_armino/middleware/driver/: BUILD.gn  CMakeLists.txt
bk7235/liteos_m/bk_sdk_armino/projects/: BUILD.gn
bk7235/liteos_m/components/: BUILD.gn
bk7235/liteos_m/components/mbedtls/: BUILD.gn
bk7235/liteos_m/inc/: riscv_hal.h  soc.h  target_config.h
bk7235/liteos_m/third_party_adapter/arch/: BUILD.gn  los_context.c  los_dispatch.S  los_exc.S
bk7235/liteos_m/third_party_adapter/lwip_intf_v2_1/: BUILD.gn  Kconfig
bk7235/liteos_m/third_party_adapter/mbedtls/: BUILD.gn
bk7235/liteos_m/third_party_adapter/musl/: BUILD.gn  qsort.c
(+661 files in other folders)
