# Copyright (C) 2022 Beken Corporation
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (ohos_kernel_type == "liteos_m") {
  import("//build/lite/config/component/lite_component.gni")
  import("//build/lite/config/subsystem/lite_subsystem.gni")
  import("//kernel/liteos_m/config.gni")
  import("//kernel/liteos_m/liteos.gni")

  module_name = get_path_info(rebase_path("."), "name")
  module_group(module_name) {
    modules = [ "liteos_m" ]
    deps = [
      ":copy_libs",
      ":encrypt",
    ]
  }

  copy("copy_libs") {
    sources = [
      "liteos_m/bk_sdk_armino/components/bk_libs/bk7235_openharmony/libs/libbt.a",
      "liteos_m/bk_sdk_armino/components/bk_libs/bk7235_openharmony/libs/libwifi.a",
    ]
    outputs = [ "$root_build_dir/libs/{{source_file_part}}" ]
  }

  copy("encrypt") {
    sources = [ "${device_path}/encrypt" ]
    outputs = [ "$root_build_dir/encrypt" ]
  }

  build_ext_component("build_7235_sdk") {
    exec_path = rebase_path("${root_out_dir}")
    ENCRYPT_FLAG = "0 0 0 0"
    command = "rm -rf ${exec_path}/build"
    command += "&& mkdir -p ${exec_path}/build"
    command += "&& ${exec_path}/encrypt ${exec_path}/${liteos_name}.bin ${ENCRYPT_FLAG}"
    command += "&& mv ${exec_path}/${liteos_name}_crc.bin ${exec_path}/build/all_2M.1220.bin"
    deps = [
      "${device_path}:bk_sdk",
      "//kernel/liteos_m:build_kernel_image",
    ]
  }
}
