# Copyright (C) 2022 Beken Corporation
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/ndk/ndk.gni")
import("${board_adapter_dir}/hals/sdk_dir.gni")

static_library("wifiservice") {
  sources = [
    "source/wifi_device.c",
    "source/wifi_device_util.c",
    "source/wifi_hotspot.c",
  ]
  defines = [
    "CFG_SUPPORT_LITEOS",
  ]
  include_dirs = [
  ]
  include_dirs += bk_hal_include_dirs
}

if (ohos_kernel_type == "liteos_m") {
  ndk_lib("wifiservice_ndk") {
    deps = [ ":wifiservice" ]

    head_files =
        [ "//foundation/communication/wifi_lite/interfaces/wifiservice" ]
  }
}
