# Copyright (C) 2022 Beken Corporation
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")
import("${beken_sdk_dir}/sdkconfig.gni")
import("${board_adapter_dir}/hals/sdk_dir.gni")
module_name = get_path_info(rebase_path("."), "name")
static_library(module_name) {
  sources = [
    "bk_ef.c",
    "port/ef_port.c",
    "src/easyflash.c",
    "src/ef_env.c",
    "src/ef_env_wl.c",
    "src/ef_iap.c",
    "src/ef_log.c",
    "src/ef_utils.c",
  ]
  public_configs = [
    ":public",
    "${beken_sdk_dir}/components/base64:public",
    "${beken_sdk_dir}/middleware/driver:public",
  ]
}

config("public") {
  include_dirs = [
    ".",
    "inc",
    "port",
  ]
}
