# Copyright (C) 2022 Beken Corporation
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")
import("${beken_sdk_dir}/sdkconfig.gni")
import("${board_adapter_dir}/hals/sdk_dir.gni")
module_name = get_path_info(rebase_path("."), "name")
lite_component(module_name) {
  features = [ ":riscv" ]
}

static_library("riscv") {
  sources = [
    "riscv/arch_interrupt.c",
    "riscv/boot_handlers_base.S",
    "riscv/boot_vectors_liteos_m.S",
    "riscv/cache.c",
    "riscv/initfini.c",
    "riscv/pmp.c",
    "riscv/reset.c",
    "riscv/riscv.c",
    "riscv/riscv_utility.S",
    "riscv/stack_base.c",
    "riscv/trap_base.c",
  ]
  include_dirs = [
    ".",
    "riscv",
    "${beken_sdk_dir}/middleware/driver/include/bk_private",
  ]
  public_configs = [
    ":public",
    "${beken_sdk_dir}/components/bk_os:public",
  ]
}
config("public") {
  include_dirs = [
    "riscv/include",
    "riscv/include/bk_private",
  ]
  ldflags = [ "-mstrict-align" ]
}
