# Copyright (C) 2022 Beken Corporation
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")
import("${beken_sdk_dir}/sdkconfig.gni")
module_name = get_path_info(rebase_path("."), "name")
lite_component(module_name) {
  features = [ ":vnd" ]
}

static_library("vnd") {
  sources = [
    "bk7235/vnd_cal/vnd_cal.c",
    "bk7235/vnd_flash/vnd_flash.c",
  ]
  public_configs = [
    ":public",
    "${beken_sdk_dir}/middleware/driver:public",
  ]
}

config("public") {
  include_dirs = [
    "bk7235/vnd_cal",
    "bk7235/vnd_cal/include",
    "bk7235/vnd_flash",
  ]
}
