# Copyright (C) 2022 Beken Corporation
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")
import("${beken_sdk_dir}/sdkconfig.gni")
import("${board_adapter_dir}/hals/sdk_dir.gni")
module_name = get_path_info(rebase_path("."), "name")
static_library(module_name) {
  sources = [
    "bk7235/gpio_driver.c",
    "bk7235/interrupt.c",
    "bk7235/interrupt_statis.c",
    "common/dd.c",
    "common/driver.c",
    "common/drv_model.c",
    "efuse/efuse_driver.c",
    "flash/flash_bypass.c",
    "flash/flash_driver.c",
    "flash/flash_partition.c",
    "general_dma/dma_driver.c",
    "gpio/gpio_driver_base.c",
    "icu/icu_driver.c",
    "icu/interrupt_base.c",
    "pmu/aon_pmu_driver.c",
    "reset_reason/reset_reason.c",
    "rtc/aon_rtc_driver.c",
    "saradc/adc_driver.c",
    "saradc/adc_statis.c",
    "security/hal_aes.c",
    "security/security.c",
    "spi/spi_driver.c",
    "spi/spi_statis.c",
    "spinlock/amp_res_lock.c",
    "sys_ctrl/sys_audio_driver.c",
    "sys_ctrl/sys_bt_driver.c",
    "sys_ctrl/sys_clock_driver.c",
    "sys_ctrl/sys_ctrl.c",
    "sys_ctrl/sys_driver.c",
    "sys_ctrl/sys_driver_common.c",
    "sys_ctrl/sys_int_driver.c",
    "sys_ctrl/sys_ps_driver.c",
    "sys_ctrl/sys_psram_driver.c",
    "sys_ctrl/sys_touch_driver.c",
    "sys_ctrl/sys_video_driver.c",
    "sys_ctrl/sys_wifi_driver.c",
    "timer/timer_driver.c",
    "trng/trng_driver.c",
    "uart/printf.c",
    "uart/uart_driver.c",
    "uart/uart_statis.c",
    "wdt/wdt_driver.c",
  ]

  public_configs = [
    ":public",
    "${beken_sdk_dir}/middleware/compal:public",
    "${beken_sdk_dir}/middleware/arch:public",
    "${beken_sdk_dir}/middleware/soc:public",
    "${beken_sdk_dir}/components/bk_os:public",
  ]
}

config("public") {
  include_dirs = [
    ".",
    "bk7235",
    "include",
    "common",
    "reset_reason",
    "pwm",
    "flash",
    "uart",
    "sys_ctrl",
    "gpio",
    "general_dma",
    "icu",
    "i2c",
    "sdcard",
    "saradc",
    "pmu",
    "mailbox",
    "spinlock",
    "touch",
    "sbc",
    "rtc",
    "i2s",
    "fft",
    "chip_support",
    "spi",
    "jpeg_enc",
    "sdcard",
    "include/bk_private",
    "include/bk_private/legacy",
  ]
}
