# Copyright (C) 2022 Beken Corporation
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")
import("${beken_sdk_dir}/sdkconfig.gni")
import("${board_adapter_dir}/hals/sdk_dir.gni")
module_name = get_path_info(rebase_path("."), "name")
lite_component(module_name) {
  features = [
    ":bk7235",
    ":common",
  ]
}

static_library("bk7235") {
  sources = [
    "bk7235/hal/adc_hal_debug.c",
    "bk7235/hal/adc_ll.c",
    "bk7235/hal/aon_pmu_hal.c",
    "bk7235/hal/aon_rtc_hal_debug.c",
    "bk7235/hal/aon_rtc_ll.c",
    "bk7235/hal/dma_hal_debug.c",
    "bk7235/hal/dma_ll.c",
    "bk7235/hal/efuse_hal_debug.c",
    "bk7235/hal/efuse_ll.c",
    "bk7235/hal/fft_hal_debug.c",
    "bk7235/hal/flash_hal_debug.c",
    "bk7235/hal/gpio_hal_debug.c",
    "bk7235/hal/gpio_ll.c",
    "bk7235/hal/i2c_hal_debug.c",
    "bk7235/hal/i2c_ll.c",
    "bk7235/hal/i2s_hal_debug.c",
    "bk7235/hal/icu_hal_debug.c",
    "bk7235/hal/icu_ll.c",
    "bk7235/hal/jpeg_dec_hal.c",
    "bk7235/hal/jpeg_hal_debug.c",
    "bk7235/hal/jpeg_ll.c",
    "bk7235/hal/pwm_hal_debug.c",
    "bk7235/hal/pwm_ll.c",
    "bk7235/hal/spi_hal_debug.c",
    "bk7235/hal/spi_ll.c",
    "bk7235/hal/sys_hal.c",
    "bk7235/hal/timer_hal_debug.c",
    "bk7235/hal/timer_ll.c",
    "bk7235/hal/trng_hal_debug.c",
    "bk7235/hal/trng_ll.c",
    "bk7235/hal/uart_hal_debug.c",
    "bk7235/hal/uart_ll.c",
    "bk7235/hal/wdt_hal_debug.c",
    "bk7235/hal/wdt_ll.c",
    "bk7235/stub.c",
  ]
  public_configs = [
    ":public",
    "${beken_sdk_dir}/middleware/driver:public",
  ]
}

static_library("common") {
  sources = [
    "common/hal/adc_hal.c",
    "common/hal/aon_rtc_hal.c",
    "common/hal/dma_hal.c",
    "common/hal/efuse_hal.c",
    "common/hal/flash_hal.c",
    "common/hal/gpio_hal.c",
    "common/hal/i2c_hal.c",
    "common/hal/icu_hal.c",
    "common/hal/pwm_hal.c",
    "common/hal/spi_hal.c",
    "common/hal/timer_hal.c",
    "common/hal/trng_hal.c",
    "common/hal/uart_hal.c",
    "common/hal/wdt_hal.c",
  ]
  public_configs = [
    ":public",
    "${beken_sdk_dir}/middleware/driver:public",
  ]
}

config("public") {
  include_dirs = [
    "bk7235/soc",
    "bk7235/hal",
    "common/soc/include",
    "common/hal/include",
  ]
}
